homeassist/01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: homeassist
  labels:
    name: homeassist
