homeassist/ingresss.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: homeassist
  namespace: homeassist
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`ha.ucdialplans.com`) 
    kind: Rule
    services:
    - name: homeassist-service
      port: 8123
    middlewares:
    - name: traefik-security
      namespace: traefik
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-default
      namespace: traefik

---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: haconfig
  namespace: homeassist
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`haconfig.ucdialplans.com`) 
    kind: Rule
    services:
    - name: haconfig-service
      port: 3218
    middlewares:
    - name: traefik-security
      namespace: traefik
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik
